--- a/style/style.css
+++ b/style/style.css
@@ -49,7 +49,7 @@ Tip: you can jump to a specific section by searching for index name or id. ex : 
     --fw-bold: 700;
     
     /*Card font size*/
-    --fs--small: 16px;
+    --fs--small: 14px;
 
     /* Box shadow */
     --box-shadow:           0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -77,7 +77,7 @@ Tip: you can jump to a specific section by searching for index name or id. ex : 
 
 html, body {
     width: 100%;
-    font-size: 22px;
+    font-size: 16px;
 }
 
 #welcome-title {font-size: 30px;}
@@ -383,7 +383,7 @@ span.info::before {
     border: 5px solid white;
     border-radius: 25px;
     max-height: 260px;
-    min-width: 235px;
+    min-width: 200px;
     min-height: 235px;
 }
 
@@ -437,14 +437,14 @@ span.info::before {
     flex-direction: row;
     border-radius: 25px;
     height: 175px;
-    min-width: 350px;
+    min-width: 200px;
 }
 
 .mpr-card-details {
     display: flex;
     flex-direction: column;
     
-    padding: 15px 50px 0 0;
+    padding: 15px 2% 0 0;
     margin-left: 15px;
     width: 60%;
 }
@@ -491,7 +491,7 @@ span.info::before {
     align-items: center;
     flex: 1 1 22%;
     height: 600px;
-    min-width: 270px;
+    min-width: 200px;
 }
 
 .ar-container {
@@ -578,6 +578,9 @@ footer li {
 
     #search-filters h3 {width: 100%;}
 
+    .mpr-card {
+        min-width: 250px;
+    }
     .show-more {font-size: 18px;}
 
     .ar-gallery {justify-content: center;}
